--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
